Merged Andy's changes for tm-5.